--- a/Milestone3/BusinessDetails.xaml
+++ b/Milestone3/BusinessDetails.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Milestone1"
         mc:Ignorable="d"
-        Title="BusinessDetails" Height="450" Width="912.831">
+        Title="BusinessDetails" Height="450" Width="1020.578">
     <Grid>
         <Label x:Name="nameLabel" Content="Business Name" HorizontalAlignment="Left" Margin="44,18,0,0" VerticalAlignment="Top"/>
         <Label x:Name="stateLabel" Content="State" HorizontalAlignment="Left" Margin="44,133,0,0" VerticalAlignment="Top"/>
@@ -21,6 +21,7 @@
         <Label x:Name="openTimesLabel" Content="Schedule" HorizontalAlignment="Left" Margin="537,18,0,0" VerticalAlignment="Top"/>
         <Label x:Name="statusLabel" Content="Status" HorizontalAlignment="Left" Margin="44,175,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="status" HorizontalAlignment="Left" Height="23" Margin="215,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="239"/>
+        <Button x:Name="addToFavoritesButton" Content="AddToFavorites" HorizontalAlignment="Left" Margin="907,55,0,0" VerticalAlignment="Top" Width="89" Height="62" Click="AddToFavoritesButton_Click"/>
 
     </Grid>
 </Window>
