--- a/Milestone3/MainWindow.xaml
+++ b/Milestone3/MainWindow.xaml
@@ -10,33 +10,37 @@
 
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="843" Margin="10,10,0,0" VerticalAlignment="Top" Width="1233">
             <TabItem Header="Business Search
-                     ">
+                     " Margin="106,0,-110,-2">
                 <Grid Background="#FFE5E5E5" Margin="0,0,4,4.2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="31*"/>
+                        <ColumnDefinition Width="581*"/>
+                    </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="208*"/>
                         <RowDefinition Height="161*"/>
                         <RowDefinition Height="424*"/>
                     </Grid.RowDefinitions>
-                    <Label x:Name="stateLabel" Content="State" HorizontalAlignment="Left" FontSize="14" Margin="32,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="56"/>
-                    <Label x:Name="cityLabel" Content="City" HorizontalAlignment="Left" FontSize="14" Margin="33,70,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="144"/>
-                    <ComboBox x:Name="stateList" HorizontalAlignment="Left" Margin="97,42,0,0" VerticalAlignment="Top" Width="80" RenderTransformOrigin="0.387,-0.098" SelectionChanged="StateList_SelectionChanged" Height="23"/>
-                    <DataGrid x:Name="businessGrid" Height="441" Margin="221,47,140,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.545" SelectionChanged="BusinessGrid_SelectionChanged" Grid.RowSpan="3"/>
-                    <Label x:Name="zipLabel" Content="Zipcode" HorizontalAlignment="Left" FontSize="14" Margin="31,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="36" Width="138" Grid.Row="1"/>
-                    <Label x:Name="categoriesLabel" Content="Business Categories" HorizontalAlignment="Left" FontSize="14" Margin="32,157,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="137" Grid.Row="1" Grid.RowSpan="2"/>
-                    <Label x:Name="selectLocationLabel" Content="Select Location" HorizontalAlignment="Left" FontSize="16" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
-                    <ListBox x:Name="cityList" HorizontalAlignment="Left" Height="91" Margin="32,107,0,0" VerticalAlignment="Top" Width="146" SelectionChanged="CityList_SelectionChanged"/>
-                    <ListBox x:Name="zipList" HorizontalAlignment="Left" Height="110" Margin="32,42,0,0" VerticalAlignment="Top" Width="146"  SelectionChanged="ZipList_SelectionChanged" Grid.Row="1"/>
-                    <ListBox x:Name="categoriesList" HorizontalAlignment="Left" Height="195" Margin="31,30.2,0,0" VerticalAlignment="Top" Width="146"   Grid.Row="2" SelectionChanged="CategoriesList_SelectionChanged"/>
-                    <Label x:Name="searchResultsLabel" Content="Search Results" HorizontalAlignment="Left" FontSize="16" Margin="221,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122"/>
-                    <Button x:Name="addCategoryButton" Content="Add" HorizontalAlignment="Left" Margin="33,232.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="55" Height="26" Click="AddCategoryButton_Click"/>
-                    <Button x:Name="removeCategoryButton" Content="Remove" HorizontalAlignment="Left" Margin="119,232.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" RenderTransformOrigin="0.457,2.21" Height="26" Click="RemoveCategoryButton_Click"/>
-                    <Button x:Name="searchBusinessButton" Content="Search By Category" HorizontalAlignment="Left" Margin="33,393.6,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144" Click="SearchBusinessButton_Click" Height="31"/>
-                    <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.2,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2" SelectionChanged="SelectedCategoriesList_SelectionChanged"/>
-                    <ComboBox x:Name="sortResultsByList" HorizontalAlignment="Left" Margin="221,159.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="504" SelectionChanged="SortResultsByList_SelectionChanged"/>
-                    <Label x:Name="sortsResultsByLabel" Content="Sort Results By:" HorizontalAlignment="Left" Margin="221,128.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="122" FontSize="14"/>
+                    <Label x:Name="stateLabel" Content="State" HorizontalAlignment="Left" FontSize="14" Margin="32,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="56" Grid.ColumnSpan="2"/>
+                    <Label x:Name="cityLabel" Content="City" HorizontalAlignment="Left" FontSize="14" Margin="33,70,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="144" Grid.ColumnSpan="2"/>
+                    <ComboBox x:Name="stateList" HorizontalAlignment="Left" Margin="35.4,42,0,0" VerticalAlignment="Top" Width="80" RenderTransformOrigin="0.387,-0.098" SelectionChanged="StateList_SelectionChanged" Height="23" Grid.Column="1"/>
+                    <DataGrid x:Name="businessGrid" Height="441" Margin="159.4,47,140,0" VerticalAlignment="Top" RenderTransformOrigin="0.497,0.545" SelectionChanged="BusinessGrid_SelectionChanged" Grid.RowSpan="3" Grid.Column="1"/>
+                    <Label x:Name="zipLabel" Content="Zipcode" HorizontalAlignment="Left" FontSize="14" Margin="31,6.2,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="36" Width="138" Grid.Row="1" Grid.ColumnSpan="2"/>
+                    <Label x:Name="categoriesLabel" Content="Business Categories" HorizontalAlignment="Left" FontSize="14" Margin="32,157.2,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.878,-1.336" Height="29" Width="137" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+                    <Label x:Name="selectLocationLabel" Content="Select Location" HorizontalAlignment="Left" FontSize="16" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122" Grid.ColumnSpan="2"/>
+                    <ListBox x:Name="cityList" HorizontalAlignment="Left" Height="91" Margin="32,107,0,0" VerticalAlignment="Top" Width="146" SelectionChanged="CityList_SelectionChanged" Grid.ColumnSpan="2"/>
+                    <ListBox x:Name="zipList" HorizontalAlignment="Left" Height="110" Margin="32,42.2,0,0" VerticalAlignment="Top" Width="146"  SelectionChanged="ZipList_SelectionChanged" Grid.Row="1" Grid.ColumnSpan="2"/>
+                    <ListBox x:Name="categoriesList" HorizontalAlignment="Left" Height="195" Margin="31,30.4,0,0" VerticalAlignment="Top" Width="146"   Grid.Row="2" SelectionChanged="CategoriesList_SelectionChanged" Grid.ColumnSpan="2"/>
+                    <Label x:Name="searchResultsLabel" Content="Search Results" HorizontalAlignment="Left" FontSize="16" Margin="159.4,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.562,-1.43" Height="32" Width="122" Grid.Column="1"/>
+                    <Button x:Name="addCategoryButton" Content="Add" HorizontalAlignment="Left" Margin="33,232.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="55" Height="26" Click="AddCategoryButton_Click" Grid.ColumnSpan="2"/>
+                    <Button x:Name="removeCategoryButton" Content="Remove" HorizontalAlignment="Left" Margin="57.4,232.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="58" RenderTransformOrigin="0.457,2.21" Height="26" Click="RemoveCategoryButton_Click" Grid.Column="1"/>
+                    <Button x:Name="searchBusinessButton" Content="Search By Category" HorizontalAlignment="Left" Margin="33,393.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="144" Click="SearchBusinessButton_Click" Height="31" Grid.ColumnSpan="2"/>
+                    <ListBox x:Name="selectedCategoriesList" HorizontalAlignment="Left" Height="116" Margin="33,263.4,0,0" VerticalAlignment="Top" Width="144"   Grid.Row="2" SelectionChanged="SelectedCategoriesList_SelectionChanged" Grid.ColumnSpan="2"/>
+                    <ComboBox x:Name="sortResultsByList" HorizontalAlignment="Left" Margin="159.4,159.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="504" SelectionChanged="SortResultsByList_SelectionChanged" Grid.Column="1"/>
+                    <Label x:Name="sortsResultsByLabel" Content="Sort Results By:" HorizontalAlignment="Left" Margin="159.4,128.4,0,0" Grid.Row="2" VerticalAlignment="Top" Width="122" FontSize="14" Grid.Column="1"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="User Information">
+            <TabItem Header="User Information" Margin="-168,0,163.6,-1.8">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="37*"/>
